// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Details /> renders Loading cluster details correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Details
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <DetailsBody>
      <DetailItem
        LoadingComponent={[Function]}
        isLoading={true}
        key="name"
        title="Name"
        value={null}
      />
      <DetailItem
        LoadingComponent={[Function]}
        isLoading={true}
        key="provider"
        title="Provider"
        value={null}
      />
      <DetailItem
        LoadingComponent={[Function]}
        isLoading={true}
        key="openshift"
        title="OpenShift version"
        value={null}
      />
    </DetailsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Details /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Details
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <dl
      class="kubevirt-detail__list"
    >
      <dt
        class="kubevirt-detail__item-title"
      >
        Name
      </dt>
      <dd
        class="kubevirt-detail__item-value"
      >
        <span>
          clusterName.clusterDoman
        </span>
      </dd>
      <dt
        class="kubevirt-detail__item-title"
      >
        Provider
      </dt>
      <dd
        class="kubevirt-detail__item-value"
      >
        <span>
          AWS
        </span>
      </dd>
      <dt
        class="kubevirt-detail__item-title"
      >
        OpenShift version
      </dt>
      <dd
        class="kubevirt-detail__item-value"
      >
        <span>
          v4.0.0
        </span>
      </dd>
    </dl>
  </div>
</div>
`;

exports[`<Details /> renders undefined correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Details
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <DetailsBody>
      <DetailItem
        LoadingComponent={[Function]}
        isLoading={false}
        key="name"
        title="Name"
        value="clusterName.clusterDoman"
      />
      <DetailItem
        LoadingComponent={[Function]}
        isLoading={false}
        key="provider"
        title="Provider"
        value="AWS"
      />
      <DetailItem
        LoadingComponent={[Function]}
        isLoading={false}
        key="openshift"
        title="OpenShift version"
        value="v4.0.0"
      />
    </DetailsBody>
  </DashboardCardBody>
</DashboardCard>
`;
